--- a/styles/header.css
+++ b/styles/header.css
@@ -12,7 +12,6 @@
     z-index: 100;
 
     background-color: white;
-    border-bottom: 1px solid #dedede;
 }
 
 .left-section {
@@ -46,7 +45,8 @@
     padding-left: 10px;
     font-size: 16px;
     border: 1px solid #cccccc;
-    border-radius: 2px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
     box-shadow: inset 0px 1px 2px rgba(0, 0, 0, 0.05);
     width: 0;
 }
@@ -64,6 +64,8 @@
     border-color:  #cccccc;
     margin-left: -1px;
     margin-right: 10px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
 }
 
 .search-button,
@@ -75,6 +77,7 @@
   justify-content: center;
   align-items: center;
   position: relative;
+  transition: background-color 0.15s;
 }
 
 .search-button .tooltip,
@@ -97,6 +100,13 @@
   transition: opacity 0.15s;
   pointer-events: none;
   white-space: nowrap;
+}
+
+
+.search-button:hover,
+.voice-search-button
+ {
+    background-color: #e2e1e1;
 }
 
 .search-button:hover .tooltip,
@@ -168,4 +178,3 @@
     height: 32px;
     border-radius: 16px;
 }
-
